# mpc-public

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  404.html  CLAUDE.md  CNAME  DEVELOPER_NOTES.md  MIGRATION_TRACKER.md  README.md  data-services.html  index.html  sitemap.xml  submit-data.html  tmp.sh  tutorials.html
digest2/: .gitattributes  CLAUDE.md  MANIFEST.in  README.md  benchmark_optimizations.py  benchmark_parallelism.py  pyproject.toml  setup.py
digest2/NEOCP_filters/: MPC.config  README.md  digest_data_19-24.csv  digest_data_24.csv  filtered_pass.csv  find_filter.py  neocp.obs  neocp_filter.py  optimal_thresholds.json
digest2/archive/0.223/: .gitignore  readme.md
digest2/archive/0.223/src/: 223.f  ET  OBSERVATORY
digest2/archive/01/: AST.BIAS.POP  README  digest2.f
digest2/archive/02/: .digest2  AST.BIAS.POP  AST.UNKN.POP  LICENSE  README  a.out  bins.mod  d2  digest2.f90  mangle.mod  mbx.mod  mconfig.mod  mconstants.mod  mdistance.mod  mobject.mod  morbit.mod  msv.mod  single.out  utest.01  utest.02  utest.els  utest.out
digest2/archive/03/: README  d2math.c  d2model.c  d2mpc.c  digest2.c  digest2.h
digest2/archive/04/: Makefile  README  d2math.c  d2mpc.c  digest2.c  digest2.h  muk.c
digest2/archive/05/: README  d2math.c  digest2.c  digest2.h  gcr.c
digest2/archive/06/: Makefile  d2model.c  d2model.h  digest2.c  gcf.h  gcr.c
digest2/archive/07/: LICENSE  README  d2math.c  d2model.c  digest2.c  gcfmath.c  muk.c
digest2/archive/08/: Makefile  README  d2math.c  d2model.h  digest2.c  muk.c
digest2/archive/09/: Makefile  README  d2math.c  d2model.c  digest2.c  digest2.h  muk.c
digest2/archive/10/: README  d2mpc.c  digest2.c  muk.c
digest2/archive/11/: Makefile  README  d2math.c  digest2.c  digest2.h  muk.c
digest2/archive/12/: README  d2math.c  d2model.c  d2model.h  d2mpc.c  digest2.c  digest2.h
digest2/archive/13/: README  d2math.c  d2model.h  d2mpc.c  digest2.c  digest2.h  muk.c
digest2/archive/14/: README  d2model.c  digest2.c
digest2/archive/15/: d2mpc.c  digest2.c  digest2.h
digest2/archive/16/: README  d2math.c  d2model.tar.bz2_20170205-1.bz2  digest2.c  s3mbin.c  s3mtest.c
digest2/archive/17/: .gitignore  .indent.pro  AUTHORS  BUILDING.md  Makefile  OPERATION.md  README.md  d2cli.c  d2math.c  d2model.c  d2modelio.c  d2mpc.c  digest2.c  digest2.h
digest2/digest2/: 0000000HwDxQ.obs  ALGORITHM.md  AUTHORS  BUILDING.md  LICENSE  MPC.config  Makefile  OPERATION.md  README.md  common.c  common.h  d2ades.c  d2ades.h  d2cli.c  d2lib.c  d2lib.h  d2math.c  d2model.c  d2model.h  d2modelio.c  d2mpc.c  digest2.c  digest2.h  digest2.model.csv  digest2.obscodes  placeholder.txt  repeatable.config  sample.obs  sample.psv  sample.xml  sample1.obs  sample1.xml  sample_old.obs  three-hr-tracklets.obs
digest2/notebooks/: mpc_tutorial_digest2.ipynb  mpc_tutorial_digest2_benchmarks.ipynb  mpc_tutorial_digest2_ground_truth.ipynb  mpc_tutorial_digest2_population_model.ipynb  mpc_tutorial_digest2_trial_orbits.ipynb
digest2/population/: MPC.config  digest2.model.csv  digest2.obscodes
digest2/population/make_population/: Makefile  README.md  README.md~  muk.c  s3mbin.c
digest2/src/digest2/: __init__.py  _extension.c  core.py  filters.py  model.py  observation.py  population.py  result.py  truth.py
digest2/tests/: batch_validate.sh  conftest.py  test_core.py  test_digest2_cli.py  test_extension.py  test_filters.py  test_improvements.py  test_observation.py  test_population.py  test_regressions.py  test_trial_orbits.py  test_truth.py
mpc-api/: README.md  pyproject.toml
mpc-api/notebooks/: mpc_tutorial_mpcapi.ipynb
mpc-api/src/mpc_api/: __init__.py  _action_codes.py  _base.py  _cnd.py  _identifier.py  _neocp.py  _orbits.py  _submission.py  _submission_status.py
mpc-api/tests/: conftest.py  test_action_codes.py  test_cnd.py  test_exceptions.py  test_identifier.py  test_mpecs.py  test_neocp.py  test_obscodes.py  test_observations.py  test_orbits.py  test_submission.py  test_submission_status.py
mpc-client/: CITATION.cff  README.md  mkdocs.yml  pyproject.toml
mpc-client/docs/: api-reference.md  contributing.md  index.md
mpc-client/docs/tutorials/: mpc_tutorial_mpcapi.ipynb
mpc-client/notebooks/: mpc_tutorial_mpcapi.ipynb
mpc-client/src/mpc_client/: __init__.py  _action_codes.py  _base.py  _cnd.py  _compat.py  _identifier.py  _mpecs.py  _neocp.py  _obscodes.py  _observations.py  _orbits.py  _requests.py  _submission.py  _submission_status.py  client.py  exceptions.py
mpc-client/tests/: conftest.py  test_action_codes.py  test_client.py  test_cnd.py  test_exceptions.py  test_identifier.py  test_mpecs.py  test_neocp.py  test_obscodes.py  test_observations.py  test_orbits.py  test_submission.py  test_submission_status.py
mpc_api/: LICENSE  pyproject.toml
mpc_api/mpc_api/: _compat.py  _mpecs.py  _obscodes.py  _observations.py  client.py  exceptions.py
mpc_api/notebooks/: mpc_tutorial_mpcapi.ipynb
mpc_api/tests/: conftest.py  test_action_codes.py  test_client.py  test_cnd.py  test_identifier.py  test_mpecs.py  test_neocp.py  test_obscodes.py  test_observations.py  test_orbits.py  test_submission.py  test_submission_status.py
mpc_orb/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
mpc_orb/demos/: Example_parse_mpcorb_json.ipynb  README.md  demo_parse.py
mpc_orb/docs/: Example_parse_mpcorb_json.html  README.md  docs.py
mpc_orb/mpc_orb/: README.md  __init__.py  demo.py  filepaths.py  interpret.py  parse.py  validate_mpcorb.py
mpc_orb/mpc_orb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mpc_orb/mpc_orb/demo_json/: 2012HN13_mpcorb_yarkovski.json  2020AB_mpcorb.json
mpc_orb/mpc_orb/schema_json/: README.md  mpcorb_schema_latest.json  mpcorb_schema_v0.1.json  mpcorb_schema_v0.2.json  mpcorb_schema_v0.4.json  mpcorb_schema_v0.5.json  mpcorb_schema_v0.6.json  mpcorb_schema_v0.7.json  mpcorb_schema_vlatest.json
mpc_orb/tests/: README.md  filepaths_for_testing.py  test_filepaths.py  test_interpret.py  test_parse.py  test_validation.py
mpc_orb/tests/jsons/: README.md
(+294 files in other folders)
