[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpc_client"
version = "0.1.0"
requires-python = ">= 3.8"
authors = [{name = "Minor Planet Center", email = "mpc@cfa.harvard.edu"}]
description = "Python client for the Minor Planet Center APIs"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.20.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dataframe = ["pandas>=1.0.0"]
all = ["pandas>=1.0.0"]
test = ["pytest", "responses>=0.20.0", "pandas>=1.0.0", "lxml", "mypy>=1.0", "types-requests"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
include = ["src/mpc_client"]

[tool.hatch.build.targets.wheel]
packages = ["src/mpc_client"]

[project.urls]
Homepage = "https://github.com/Smithsonian/mpc-public/mpc-client"
Documentation = "https://mpc-client.readthedocs.io/"
